--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,45 +3,53 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(278px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 16px;
 }
 
 .cards > ul > li {
-  /* display: flex;
-  border: 1px solid var(--blue-light);
-  border-radius: 6px; */
-  /* padding: 12px; */
+  margin-bottom: 26px;
 }
 
 .cards .cards-card-content {
-  display: flex;
   border: 1px solid var(--blue-light);
   border-radius: 6px;
-  padding: 12px;
-  /* height: 164px; */
+  padding: 18px;
+  display: flex;
+}
+
+.cards .cards-card-image img {
+  height: 140px; 
+  width: 110px;
+  object-fit: contain;
 }
 
 .cards .cards-card-body {
   margin: 0;
-  background-color: aliceblue;
+  padding-left: 18px;
 }
 
-.cards .cards-card-image {
-  line-height: 0;
-  display: flex;
-  align-items: center;
+.cards .cards-card-body h4 {
+  margin-bottom: 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+}
+
+.cards .cards-card-body p {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 4px 0 0 0;
 }
 
 .cards .cards-card-body > *:first-child {
   margin-top: 0;
 }
-
-.cards > ul > li img {
-  width: 100%;
-  /* aspect-ratio: 4 / 3; */
-  object-fit: cover;
-} 
 
 .cards .cards-card-cart-update {
   display: flex;
