--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -42,6 +42,19 @@
   margin: 0;
 }
 
+.cards .cards-card-body h4 span {
+  padding: 0 2px;
+}
+
+.cards .cards-card-body h4 span:first-child{
+  padding-left: 6px
+}
+
+.cards .cards-card-body h4 span svg {
+  height: 20px;
+  width: 20px;
+}
+
 .cards .cards-card-body p {
   display: -webkit-box;
   -webkit-box-orient: vertical;
