fix: import font correctly

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: poppinsbold;
+  font-family: poppins;
   font-style: normal;
   font-weight: 700;
   src: url('../fonts/Poppins-Bold.woff2') format('woff2');
@@ -19,7 +19,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: poppinsmedium;
+  font-family: poppins;
   font-style: normal;
   font-weight: 500;
   src: url('../fonts/Poppins-Medium.woff2') format('woff2');
@@ -28,7 +28,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: poppinsregular;
+  font-family: poppins;
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/Poppins-Regular.woff2') format('woff2');
