--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,106 +3,176 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 16px;
+  gap: var(--horizontal-spacing);
+}
+
+@media (width >= 600px) {
+  .cards > ul {
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  }
 }
 
 .cards > ul > li {
-  margin-bottom: 26px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-xs);
 }
 
-.cards .cards-card-content {
-  border: 1px solid var(--blue-light);
-  border-radius: 6px;
-  overflow: hidden;
-  padding: 18px;
+.cards .cards-card {
+  display: grid;
+  gap: var(--horizontal-spacing);
   position: relative;
+  border: var(--border-s) solid var(--blue-light);
+  border-radius: var(--rounding-m);
+  padding: var(--horizontal-spacing);
+}
+
+@media (width >= 600px) {
+  .cards .cards-card {
+    grid-template-columns: 120px 1fr;
+  }
 }
 
 .cards .cards-card-image {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  height: 125px;
-  margin-bottom: 12px;
+  height: 120px;
 }
 
 .cards .cards-card-image img {
-  height: 125px;
-  width: auto;
+  width: 100%;
+  height: 120px;
   object-fit: contain;
 }
 
-.cards .cards-card-body {
-  margin: 0;
-  height: 110px;
-  overflow: hidden;
+@media (width >= 600px) {
+  .cards .cards-card-image,
+  .cards .cards-card-image img {
+    height: 150px;
+  }
 }
 
-.cards .cards-card-body .img-wrapper {
+.cards .cards-card-dietary,
+.cards .cards-card-price,
+.cards .cards-card-badge {
   position: absolute;
-  top: 8px;
-  right: 8px;
-}
-
-.cards .cards-card-body .img-wrapper span svg {
-  height: 24px;
-  width: 24px;
-}
-
-.cards .cards-card-body h4 {
+  width: max-content;
+  max-width: 70px;
   margin: 0;
+  border-radius: var(--rounding-s);
+  padding: var(--spacing-xs);
+  background-color: var(--transparent-white-400);
+  font-size: var(--body-size-xxl);
+  text-align: center;
+}
+
+.cards .cards-card-dietary {
+  top: var(--border-s);
+  right: var(--border-s);
   display: flex;
-  justify-content: space-between;
-}
-
-.cards .cards-card-body .img-wrapper span:last-child{
-  padding-left: 6px
-}
-
-.cards .cards-card-body p {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-/* PICK YOUR PACK STYLING */
-.cards .pick-your-pack {
-  display: flex;
-  background-color: blueviolet;
-}
-
-.cards .cards-card-cart-update {
-  display: flex;
-  justify-content: space-between;
-  padding: 9px 30px;
-  align-items: center;
-}
-
-.cards .cards-card-update-button button {
-  height: 38px;
-  width: 38px;
-  background-color: var(--blue);
-  font-size: x-large;
-  border-radius: 100%;
-  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 0 0.2ch;
+}
+
+.cards .cards-card-badge {
+  top: var(--rounding-m);
+  left: var(--rounding-m);
+  background-color: aqua;
+}
+
+.cards .cards-card-body :first-child {
+  margin-top: 0;
+}
+
+.cards .cards-card-body :last-child {
+  margin-bottom: 0;
+}
+
+@media (width >= 600px) {
+  .cards .cards-card-body {
+    height: 150px;
+    max-height: 150px;
+    overflow-y: hidden;
+  }
+
+  .cards .cards-card-body h3 ~ p:not([class]) {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: var(--line-clamp);
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
+/* cart */
+.cards form {
+  display: flex;
   align-items: center;
-  color: var(--white);
+  justify-content: space-around;
 }
 
-.cards .cards-card-update-button button:hover {
-  background-color: var(--blue-light);
+.cards form button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  padding: 0;
 }
 
-.cards .cards-card-update-button button:focus {
-  outline: none;
-}
-
-.cards .cards-card-cart-item-count {
+.cards form input {
+  appearance: none;
+  -moz-appearance: textfield;
+  flex: 0 0 33%;
+  border: 0;
+  padding: 0.5ch 0 0 1.4ch;
+  background-color: transparent;
   font-family: var(--heading-font-family);
-  font-size: x-large;
+  font-size: var(--heading-size-m);
+  line-height: 0;
+  text-align: center;
+}
+
+.cards form input:focus {
+  color: currentcolor;
+}
+
+/* PRICE VARIANT */
+.cards.price .cards-card-price {
+  top: var(--rounding-m);
+  right: var(--rounding-m);
+  display: grid;
+  font-size: var(--body-size-xxl);
+  font-weight: bold;
+}
+
+.cards.price .cards-card-price .flat-rate {
+  font-size: var(--detail-size-xs);
+  font-weight: normal;
+}
+
+.cards.price .cards-card-body {
+  height: 80px;
+  max-height: 80px;
+}
+
+
+@media (width >= 600px) {
+  .cards.price .cards-card {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* CUSTOMIZE VARIANT */
+.cards.customize .button.customize {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 44px;
+  font-family: var(--heading-font-family);
+  font-size: var(--heading-size-m);
+  line-height: 0;
 }
