--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -17,7 +17,7 @@
     overflow-wrap: break-word;
 }
 
-@keyframes rotateBackground {
+@keyframes rotate-background {
     from {
         background-position: center center;
         transform: rotate(0deg);
@@ -58,7 +58,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
-    animation: rotateBackground 10s linear infinite;
+    animation: rotate-background 10s linear infinite;
     opacity: 1;
 }
 
