--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,4 +1,3 @@
-/* stylelint-disable no-descending-specificity */
 .table-container {
     margin-bottom: 32px;
 }
@@ -11,79 +10,113 @@
     margin-top: 0;
 }
 
-.table-container .table-wrapper:last-child .table {
-    border-top: none;
+.table-form-submit-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.table-form-submit-wrapper button {
+    height: 50px;
+    width: 300px;
+    background-color: var(--blue);
+    color: var(--white);
+    border-radius: 6px;
+    font-family: var(--heading-font-family);
+    font-size: var(--heading-size-s);
+    margin: 20px 0;
+}
+
+.table-form-submit-wrapper button:disabled {
+    background-color: var(--blue-light);
+}
+
+.table-wrapper:not(:has(+ .table-wrapper)) .table tbody tr:last-of-type td {
+    border-bottom: 2px solid var(--blue);
 }
 
 .table {
     width: 100vw;
     margin-left: calc(-50vw + 50%);
+}
+
+.table:first-of-type {
     border-top: 2px solid var(--blue);
 }
 
 .table table {
     border-spacing: 0;
+    width: 100%;
 }
 
 .table thead th {
+    padding: 0 12px;
     border-bottom: 2px solid var(--blue);
+    font-family: var(--heading-font-family);
+    font-size: var(--heading-size-xs);
+    text-transform: uppercase;
     background-color: var(--blue-lightest);
-    text-align: left;
 }
 
-.table thead th h2 {
-    font-size: var(--detail-size-xl);
-    margin: 0;
-    padding: 10px 16px;
-}
-
-.table thead th:nth-of-type(1) {
+.table thead th:first-child {
     text-align: left;
     border-right: 2px solid var(--blue);
 }
 
-.table table tbody td {
+.table thead th:last-child {
+    width: 125px;
+}
+
+.table tbody tr td {
+    padding: 16px 12px;
     border-bottom: 2px solid var(--blue);
-    padding: 16px;
+}
+
+.table tbody tr:last-child td {
+    border-bottom: none;
+}
+
+.table tbody tr td:first-child {
+    border-right: 2px solid var(--blue);
     position: relative;
 }
 
-.table table tbody td:nth-of-type(1) {
-    border-right: 2px solid var(--blue);
-}
-
-.table table tbody td h3 {
-    margin: 0
-}
-
-.table table tbody td p {
+.table table tbody tr td:first-child p:not([class]) {
+    margin-right: 30px;
+    margin-bottom: 0;
     font-size: var(--body-size-s);
-    margin-top: 0;
 }
 
-.table table tbody td p:not([class]) {
-    margin-right: 20px;
-}
-
-.table .img-wrapper {
+.table tbody tr td:first-child .img-wrapper {
+    position: absolute;
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
     width: 40px;
-    position: absolute;
     top: 50%;
     right: 0;
     bottom: 50%;
 }
 
-.table .img-wrapper svg {
-   height: 24px;
-   width: auto;
+.table tbody tr td:first-child .img-wrapper svg {
+    height: 24px;
+    width: auto;
+ }
+ 
+.table tbody tr td:first-child .img-wrapper span:first-of-type {
+    padding-bottom: 6px
 }
 
-.table .img-wrapper span:first-of-type {
-    padding-bottom: 6px
+.table tbody tr td:last-child p {
+    text-align: center;
+    font-size: var(--heading-size-l);
+    font-family: var(--heading-font-family);
+    margin: 0;
+}
+
+.table tbody tr td:first-of-type h3 {
+    margin: 0;
 }
 
 @media (width >= 900px) {
@@ -94,9 +127,7 @@
         border-left: 2px solid var(--blue);
     }
 
-    .table thead th h2 {
-        font-size: var(--body-size-xxl);
-        margin: 0;
-        padding: 10px 16px;
+    .table table tbody tr td:first-child p:not([class]) {
+        font-size: var(--body-size-m);
     }
 }
