--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,7 @@
   --pale-teal: #CCE0DF;
   --pale-blue: #CCD7E0;
   --pale-purple: #D5CCE0;
+  --specialty-color-blue: #dcfffb;
   --gradient: conic-gradient(
     var(--pale-orange),
     var(--pale-pink) 15%,
