--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -7,8 +7,8 @@
     border-top: 2px solid var(--blue);
     border-bottom: 2px solid var(--blue);
     position: relative;
-    margin-top: 80px;
-    margin-bottom: 40px;
+    /* margin-top: 80px; */
+    /* margin-bottom: 40px; */
 }
 
 @keyframes rotate-background {
