Fixed remaining linting errors.

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -32,15 +32,15 @@
     background-color: var(--blue-lightest);
 }
 
+.table table thead th:last-child,
+.table table tbody tr th:last-child {
+    width: 125px;
+}
+
 .table table thead th:first-child,
 .table table tbody tr th:first-child {
     text-align: left;
     border-right: 2px solid var(--blue);
-}
-
-.table table thead th:last-child,
-.table table tbody tr th:last-child {
-    width: 125px;
 }
 
 .table table tbody tr td {
@@ -104,8 +104,9 @@
 
 
 .table table tbody tr td:last-child 
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+    /* stylelint-disable-next-line property-no-vendor-prefix */
     -webkit-appearance: none;
     margin: 0;
 }
@@ -114,8 +115,8 @@ input[type=number]::-webkit-inner-spin-button {
    border-bottom: none;
 }
 
-.table table tbody tr td:last-child p input[type=number] {
-      /* stylelint-disable-next-line property-no-vendor-prefix */
+.table table tbody tr td:last-child p input[type='number'] {
+    /* stylelint-disable-next-line property-no-vendor-prefix */
     -moz-appearance: textfield;
 }
 
