Fixed remaining linting errors.

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -32,7 +32,7 @@
     background-color: var(--blue-lightest);
 }
 
-.table table thead th:first-child {
+.table table thead tr th:first-child {
     text-align: left;
     border-right: 2px solid var(--blue);
 }
@@ -42,7 +42,7 @@
     border-right: 2px solid var(--blue);
 }
 
-.table table thead th:last-child {
+.table table thead tr th:last-child {
     width: 125px;
 }
 
