Set up form validation.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
   /* brand */
   --white: #FFFCF3;
   --blue: #0B21E0;
+  --red: #FB0619;
   --blue-light: #C1C8FF;
   --blue-lightest: #EDEFFA;
   --primary: var(--blue);
