--- a/utils/forms/forms.css
+++ b/utils/forms/forms.css
@@ -8,6 +8,7 @@
     font-family: var(--heading-font-family);
     color: var(--blue);
     margin: 0;
+    margin-top: 10px;
 }
 
 .form 
@@ -15,9 +16,22 @@ input,
 textarea,
 select {
     border: solid 2px var(--blue-light);
-    margin-bottom: 20px;
     background-color: transparent;
     padding: 20px;
+    margin-bottom: 10px;
+    color: var(--blue);
+} 
+
+.form input.touched:valid,
+textarea.touched:valid,
+select.touched:valid {
+    border: solid 2px var(--blue-light);
+}
+
+.form input.touched:invalid,
+textarea.touched:invalid,
+select.touched:invalid {
+    border: solid 2px var(--red);
 }
 
 .form 
@@ -28,6 +42,20 @@ textarea::placeholder {
 
 .form .form-radio {
     padding: 12px 0;
+}
+
+.form .error-messages {
+    color: var(--red);
+    /* background-color: yellowgreen; */
+}
+
+.form span.forms-errors {
+    margin: 100px;
+    background-color: violet;
+}
+
+.form-submit {
+    margin: 20px;
 }
 
 /* .form .form-radio {
