Fixes and updates.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,7 @@
   --white: #FFFCF3;
   --blue: #0B21E0;
   --red: #FB0619;
+  --red-light: #fceff0;
   --blue-light: #C1C8FF;
   --blue-lightest: #EDEFFA;
   --primary: var(--blue);
