Updated styles for textarea.

--- a/utils/forms/forms.css
+++ b/utils/forms/forms.css
@@ -55,6 +55,11 @@ textarea::placeholder {
    color: var(--blue-light);
 }
 
+.form textarea {
+   height: 200px;
+   resize: vertical;
+}
+
 .form .error-messages {
     color: var(--red);
     font-size: 12px;
