Updated styles for textarea.

--- a/utils/forms/forms.css
+++ b/utils/forms/forms.css
@@ -32,6 +32,7 @@
     font-family: var(--heading-font-family);
     color: var(--blue);
     margin: 0;
+    height: 24px;
 }
 
 .form label.label-invalid {
@@ -60,7 +61,6 @@ textarea::placeholder {
 }
 
 .form textarea {
-   /* height: 185px; */
    resize: vertical;
 }
 
