--- a/utils/forms/forms.css
+++ b/utils/forms/forms.css
@@ -55,12 +55,28 @@ textarea::placeholder {
    color: var(--blue-light);
 }
 
-.form .form-textarea {
+/* .form .form-textarea {
    height: 219px;
-}
+} */
+
 
 .form textarea {
    resize: vertical;
+   width: 100%;
+   height: 185px;
+   border: 2px solid transparent;
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+
+.form textarea::placeholder {
+    font-size: 16px;
+    line-height: 1.5; /* Match the text line height */
+    padding: 0; /* Ensure no additional padding */
+}
+
+.form textarea:focus {
+    border-color: var(--focus-color);
 }
 
 .form .error-messages {
