--- a/utils/forms/forms.css
+++ b/utils/forms/forms.css
@@ -32,6 +32,7 @@
     font-family: var(--heading-font-family);
     color: var(--blue);
     margin: 0;
+    height: 26px;
 }
 
 .form label.label-invalid {
