--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,7 +163,7 @@ main {
   }
 
   main {
-    margin: calc(var(--header-height) + var(--horizontal-spacing)) auto 0;
+    margin: 112px auto 0;
   }
 }
 
