--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -10,20 +10,28 @@
     background-color: var(--white);
 }
 
-.modal > div {
-    width: 100%;
-    height: 100%;
-}
-
-.modal > div > div {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-}
-
 .modal > div > div p.img-wrapper picture img {
     height: 500px;
     width: auto;
+}
+
+.modal .modal-close-btn {
+    height: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: var(--horizontal-spacing);
+    font-size: var(--heading-size-s);
+    color: var(--blue);
+    border: none;
+    cursor: pointer;
+    font-size: var(--heading-size-xl);
+}
+
+.modal .modal-close-btn:focus:not(:focus-visible) {
+    outline: none;
+    border: none;
+    box-shadow: none;
 }
 
 .modal-btn {
@@ -38,21 +46,4 @@
     cursor: pointer;
     margin: 20px 0;
     transition: background-color 0.3s ease;
-}
-
-.modal-close-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: var(--spacing-l);
-    font-size: var(--heading-size-s);
-    color: var(--blue);
-    border: none;
-    cursor: pointer;
-}
-
-.modal-close-btn:focus:not(:focus-visible) {
-    outline: none;
-    border: none;
-    box-shadow: none;
 }
