--- a/utils/cart/cart.css
+++ b/utils/cart/cart.css
@@ -1,5 +1,9 @@
-.cart-card-wrapper {
+.cart .card-wrapper {
     border: 2px solid var(--blue-light);
     height: 100px;
     padding: var(--horizontal-spacing);
+}
+
+.cart .card-button-wrapper {
+    padding: 20px 0;
 }
