--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -3,7 +3,7 @@
     z-index: 10;
     left: 0;
     top: 0;
-    padding: var(--spacing-l);
+    padding: var(--spacing-xl);
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -15,6 +15,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    padding: var(--spacing-xl);
     padding: var(--horizontal-spacing);
     font-size: var(--heading-size-s);
     color: var(--blue);
